fixed uneven space in features and footer

--- a/payvision-fe/style.css
+++ b/payvision-fe/style.css
@@ -37,10 +37,6 @@
   }
 }
 
-.navbar-brand {
-  font-weight: 500;
-}
-
 .hero-section {
   background-size: cover;
   background-position: center;
@@ -213,9 +209,22 @@ label {
 }
 
 .feature-item {
-  display: flex;
+  display: grid;
+  grid-template-columns: 10% 20% 70%;
   align-items: center;
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .feature-item {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+  }
+
+  .feature-icon-container {
+    width: 10%;
+    align-items: start;
+  }
 }
 
 .feature-icon-container {
@@ -276,16 +285,16 @@ p {
   margin-right: 30px;
 }
 
-.footer-section.about {
-  margin-bottom: 1.5rem;
+.footer-section p {
+  margin-bottom: 10px;
+  color: #cbd3da;
 }
 
 .footer-section h4 {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   color: #fff;
 }
 
-.footer-section p,
 .footer-section ul {
   margin: 0;
   padding: 0;
@@ -521,20 +530,6 @@ button[type="submit"]:hover {
   .stat {
     width: 100%;
     margin-bottom: 16px;
-  }
-
-  .footer-section ul li a {
-    color: #cbd3da;
-    text-decoration: none;
-    margin-bottom: 10px;
-    display: block;
-    transition: color 0.3s ease;
-    text-align: left;
-  }
-
-  .social .social-icons a {
-    display: flex;
-    justify-content: flex-start;
   }
 }
 
